@@ -95,8 +95,9 @@ installation-guide (2007xxxx) UNRELEASED; urgency=low
   * Make UTF-8 the default encoding for the text version for all languages
     that still used ISO-8859-1.
   * Korean text version changed to UTF-8 as well on request of Changwoo Ryu.
+  * Enable PDF for Korean for website builds.
 
- -- Frans Pop <fjp@debian.org>  Thu, 07 Feb 2008 20:43:49 +0100
+ -- Frans Pop <fjp@debian.org>  Fri, 08 Feb 2008 01:05:10 +0100
 
 installation-guide (20070319) unstable; urgency=low
 
